[package]
name = "rinha-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive", "env"] }
twelf = { version="0.11.0", features = ["yaml"]}
thiserror= "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
# tokio-stream = { version = "0.1.14", features = ["net"] }
serde = "1.0.164"
serde_json = "1.0.97"
log = { version = "0.4.19", features = ["kv_unstable_serde"], default-features = false }
structured-logger="1.0.1"

async-trait = "0.1.68"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tonic-build = "0.11.0"
config = "0.14.0"
serde_derive = "1.0.196"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
mysql = "*"

[build-dependencies]
tonic-build = "0.9.2"